# MOTIP

./: main.py  pyproject.toml  requirements.txt
