[project]
name = "motip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "einops>=0.8.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]
